Подправил анимацию исправил отзывы

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<h3>Точно в срок</h3>
 					<p>Работаем строго по установленным срокам, которые прописаны в договоре. Если не успеваем, Вы платите меньше.</p>
 				</div>
-				<div class="features-block wow animate__animated animate__fadeInUp" data-wow-delay='0.4 s'>
+				<div class="features-block wow animate__animated animate__fadeInUp" data-wow-delay='0.4s'>
 					<div class="features-img">
 						<picture>
 							<source srcset="img/features/piggy-bank.svg" type="image/">
@@ -230,21 +230,18 @@
 								<img src="img/feedback/photo/1.jpg" alt="">
 								<img src="img/feedback/photo/2.jpg" alt="">
 								<img src="img/feedback/photo/3.jpg" alt="">
-								<img src="img/feedback/photo/4.jpg" alt="">
-								<img src="img/feedback/photo/5.jpg" alt="">
-								<img src="img/feedback/photo/6.jpg" alt="">
 							</div>
 						</div>
 						<div class="col-md-6">
-							<p>Объект: г.Москва, Нахимовский проспект д.10</p>
-							<p>Площадь: <strong>357 м2</strong></p>
-							<p>Выполнен <strong>за: 10 дней</strong></p>
+							<p>Объект: г.Москва, Невский проспект д.12</p>
+							<p>Площадь: <strong>675 м2</strong></p>
+							<p>Выполнен <strong>за: 7 дней</strong></p>
 							<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
 							<p>Особенности: <strong>перепады неровности стен достигали до 6 см</strong></p>
 
 							<div class="media">
 								<div class="media-left">
-									<img src="img/feedback/avatar.jpg" alt="" class="media-object">
+									<img src="img/feedback/avatar.jpeg" alt="" class="media-object">
 								</div>
 								<div class="media-body">
 									<span>Заказчик</span>
@@ -253,7 +250,7 @@
 							</div>
 
 							<div class="feedback-text">
-								<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Lorem пустился заголовок послушавшись живет!</p>
+								<p>После себя идеально убрали площади. Толковые, спокойные ребята. Хорошо знают своё дело. Работают не спеша, по принципу: семь раз отмерь, один раз отрежь.</p>
 							</div>
 
 						</div>
@@ -263,33 +260,31 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="fotorama" data-nav="thumbs">
-								<img src="img/feedback/photo/1.jpg" alt="">
-								<img src="img/feedback/photo/2.jpg" alt="">
-								<img src="img/feedback/photo/3.jpg" alt="">
 								<img src="img/feedback/photo/4.jpg" alt="">
 								<img src="img/feedback/photo/5.jpg" alt="">
 								<img src="img/feedback/photo/6.jpg" alt="">
 							</div>
 						</div>
 						<div class="col-md-6">
-							<p>Объект: г.Москва, Нахимовский проспект д.10</p>
-							<p>Площадь: <strong>357 м2</strong></p>
-							<p>Выполнен <strong>за: 10 дней</strong></p>
+							<p>Объект: г.Москва, Кутузовская улица д.34</p>
+							<p>Площадь: <strong>160 м2</strong></p>
+							<p>Выполнен <strong>за: 2 дня</strong></p>
 							<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
 							<p>Особенности: <strong>перепады неровности стен достигали до 6 см</strong></p>
 
 							<div class="media">
 								<div class="media-left">
-									<img src="img/feedback/avatar.jpg" alt="" class="media-object">
+									<img src="img/feedback/avatar3.jpeg" alt="" class="media-object">
 								</div>
 								<div class="media-body">
 									<span>Заказчик</span>
-									<h4 class="media-heading">Нахимов Артём</h4>
+									<h4 class="media-heading">Наумов Влад</h4>
 								</div>
 							</div>
 
 							<div class="feedback-text">
-								<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Lorem пустился заголовок послушавшись живет!</p>
+								<p>Работой доволен на все 100.Ребята всегда на связи любые нюансы решались за 5 минут.Дай бог вам хороших и адекватных заказчиков.
+									Успехов в работе!</p>
 							</div>
 
 						</div>
@@ -299,33 +294,30 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="fotorama" data-nav="thumbs">
-								<img src="img/feedback/photo/1.jpg" alt="">
 								<img src="img/feedback/photo/2.jpg" alt="">
-								<img src="img/feedback/photo/3.jpg" alt="">
 								<img src="img/feedback/photo/4.jpg" alt="">
 								<img src="img/feedback/photo/5.jpg" alt="">
-								<img src="img/feedback/photo/6.jpg" alt="">
 							</div>
 						</div>
 						<div class="col-md-6">
-							<p>Объект: г.Москва, Нахимовский проспект д.10</p>
-							<p>Площадь: <strong>357 м2</strong></p>
-							<p>Выполнен <strong>за: 10 дней</strong></p>
+							<p>Объект: г.Москва, Новый переулок д.9</p>
+							<p>Площадь: <strong>275 м2</strong></p>
+							<p>Выполнен <strong>за: 9 дней</strong></p>
 							<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
 							<p>Особенности: <strong>перепады неровности стен достигали до 6 см</strong></p>
 
 							<div class="media">
 								<div class="media-left">
-									<img src="img/feedback/avatar.jpg" alt="" class="media-object">
+									<img src="img/feedback/avatar2.jpeg" alt="" class="media-object">
 								</div>
 								<div class="media-body">
 									<span>Заказчик</span>
-									<h4 class="media-heading">Нахимов Артём</h4>
+									<h4 class="media-heading">Николаев Олег</h4>
 								</div>
 							</div>
 
 							<div class="feedback-text">
-								<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Lorem пустился заголовок послушавшись живет!</p>
+								<p>Хочу выразить благодарность Павлу и Александру, очень квалифицированно и ответственно подходят к выполнению работы. Ребята знают своё дело. В некоторых вопросах помогли советом.</p>
 							</div>
 
 						</div>
@@ -765,17 +757,11 @@
 						<img src="img/main_logo.png" alt="">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-md-offset-4">
 					<div class="footer-contact">
 						<p><strong>+7 495 771 05 08</strong></p>
 						<a class="contact-link" href="mailto:order@gipsolit.ru">order@gipsolit.ru</a></p>
 						<p class="contact-link">Пн-Пт: с 9:00 до 18:00</p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="footer-dev">
-						<p>Разработка сайта:</p>
-						<img src="img/footer/dev-logo.png" alt="dev-logo">
 					</div>
 				</div>
 			</div>
